fix for home page smooth scrolling on mobiles

--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -2519,7 +2519,6 @@ select.custom-arrow{
         background-color: #fff;
         width: 100%;
         float: right;
-        -webkit-overflow-scrolling: touch;
         -webkit-transition: all .2s ease-in-out;
         -o-transition: all .2s ease-in-out;
         transition: all .2s ease-in-out;
